Fix ALF-10574 - Potential layout issue with future versions of WebKit-based browsers    Also fixed second use of "About" pop-up (still glitches on a dashboard with the Welcome dashlet due to a webkit rendering problem)    Removed some debug logging (log trace too verbose)
git-svn-id: http://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@31426 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/components/header/header.css
+++ b/root/projects/slingshot/source/web/components/header/header.css
@@ -142,6 +142,11 @@
    text-align: right;
 }
 
+.header .user-items .yuimenu
+{
+   visibility: hidden;
+}
+
 .header .user-items span.separator
 {
    border-left: 1px dotted #dfdfdf;
@@ -229,6 +234,7 @@
 .header .user-items a.avatar
 {
    display: inline-block;
+   left: 0;
    outline: medium none;
    padding: 0 10px 4px !important;
    position: absolute;
